--- a/src/components/navbar/styles.css
+++ b/src/components/navbar/styles.css
@@ -16,12 +16,12 @@
   width: 50px;
 }
 
-span {
+.title {
   font-size: 24px;
   font-weight: bold;
 }
 
-button {
+.metamaskButton {
   padding: 10px;
   width: 200px;
   height: 50px;
